Fix duplicate alts in ANTLR parser